# wargame

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Main.qml  Makefile  README.md  main.cpp
.github/workflows/: ci.yml
assets/: sample_map.json
cmake/: WargameTargets.cmake
config/: server.dev.example.json
deploy/: .env.example  Caddyfile  Containerfile  Containerfile.runtime  STAGING_RUNBOOK.md  account.Dockerfile  backup.sh  compose.yml  game-server.Dockerfile  install-public.sh  install-server-no-check.sh  install-server.sh  prometheus-alerts.yml  prometheus.yml  reset-admin.sh  restore.sh  server.prod.example.json  smoke-test.sh  staging-check.sh  uninstall-server.sh  upgrade.sh  validate-prod.sh  wait-healthy.sh
docs/: CODE_REVIEW_2026-07-17.md  DEPLOYMENT_HANDOFF_2026-07-18.md  NETWORKING_PLAN.md  NETWORKING_TEST_HANDOFF_2026-07-17.md  NETWORK_TEST_CHECKLIST.md  ONLINE_DEPLOYMENT.md  P0_NETWORKING_IMPLEMENTATION.md  RELEASE.md  SESSION_HANDOFF_2026-07-17.md
map/: MANIFEST.sha256  README.md  metadata.json  prompt.txt  run.sh  tilejson.json
map/tools/: build_tiles.py
qml/: AppContext.qml  ModeSelectionView.qml  SimulationRoot.qml
qml/components/: BattleReportDialog.qml  ChatPanel.qml  ConnectionDialog.qml  EventDialog.qml  GhostButton.qml  Icon.qml  MapCanvas.qml  MessageLog.qml  Minimap.qml  RoutePlannerDialog.qml  SectionTitle.qml  SessionDialog.qml  SettingsPanel.qml  TonalButton.qml  UnitEditDialog.qml  UnitPanel.qml
qml/views/: AttackUavView.qml  CommandPostView.qml  DirectorView.qml  GroundScoutView.qml  ReconUavView.qml  RosterEditorDialog.qml  ScenarioEditorView.qml
server/: CMakeLists.txt
server/account/: app.py  requirements.txt  reset_admin.py
server/account/static/: app.css  app.js  index.html
server/game/: GameServer.cpp  GameServer.h  RoomPersistence.cpp  RoomPersistence.h  StateProjector.cpp  StateProjector.h  main.cpp
src/client/: ClientStateStore.cpp  ClientStateStore.h  ISessionAdapter.h  LocalSessionAdapter.cpp  LocalSessionAdapter.h  RemoteSessionAdapter.cpp  RemoteSessionAdapter.h
src/core/: CombatResolver.cpp  CombatResolver.h  CommandResult.cpp  CommandResult.h  Geo.cpp  Geo.h  IClock.h  ITransport.h  LocalTransport.cpp  LocalTransport.h  LockedStepClock.cpp  LockedStepClock.h  MapProvider.cpp  MapProvider.h  MessageBus.cpp  MessageBus.h  MessageLogRecorder.cpp  MessageLogRecorder.h  RealTimeClock.h  Scenario.cpp  Scenario.h  SimulationEngine.cpp  SimulationEngine.h  SnapshotCodec.cpp  SnapshotCodec.h  TileCacheLocator.cpp  TileCacheLocator.h  TileImageProvider.cpp  TileImageProvider.h  UnitBase.cpp  UnitBase.h  UnitFsm.cpp  UnitFsm.h
src/network/: ClientStateStore.cpp  ClientStateStore.h  NetworkClient.cpp  NetworkClient.h
src/protocol/: Protocol.cpp  Protocol.h  StateDelta.cpp  StateDelta.h
src/server/: AdminServer.cpp  AdminServer.h  AuthPolicy.cpp  AuthPolicy.h  HealthServer.cpp  HealthServer.h  PersistenceStore.cpp  PersistenceStore.h  RoomManager.cpp  RoomManager.h  ServerConfig.cpp  ServerConfig.h  ServerMetrics.cpp  ServerMetrics.h  SessionGateway.cpp  SessionGateway.h  SimulationRoom.cpp  SimulationRoom.h  VisibleStateProjector.cpp  VisibleStateProjector.h  main.cpp
src/units/: AttackUAV.cpp  AttackUAV.h  CommandPost.cpp  CommandPost.h  GroundScout.cpp  GroundScout.h  JammerUAV.cpp  JammerUAV.h  MobileUnitBase.cpp  MobileUnitBase.h  ReconUAV.cpp  ReconUAV.h
src/view/: MapTileRenderer.cpp  MapTileRenderer.h  ScenarioEditor.cpp  ScenarioEditor.h  SimulationController.cpp  SimulationController.h
tests/: network_main.cpp  network_soak.cpp  persistence_faults.cpp  run_netem_matrix.sh  run_soak.sh  test_attack_power.cpp  test_checkpoint.cpp  test_client_state_store.cpp  test_combat_resolver.cpp  test_command_result.cpp  test_controller.cpp  test_engine.cpp  test_geo.cpp  test_locksync.cpp  test_maptiles.cpp  test_messagebus.cpp  test_networking.cpp  test_p3.cpp  test_phase1_fixes.cpp  test_protocol.cpp  test_room_persistence.cpp  test_scenario.cpp  test_snapshot.cpp  test_state_projector.cpp  test_transport.cpp  test_unitfsm.cpp
tools/: check-source-format.sh  network-smoke.mjs  verify-docker-recovery.sh  verify-test-baseline.sh
